se subio la pagina con el dominio www-zetait.com.ar

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
   </head>
 
   <body id="page-top">
+  
+
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
@@ -57,10 +59,10 @@
     <header class="masthead">
       <div class="header-content">
         <div class="header-content-inner">
-          <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
+          <h1 id="homeHeading">Servicios IT a tu alcance</h1>
           <hr>
-          <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+          <p>¿Problemas con tu velocidad de internet? ¿Estas emprendiendo un negocio y necesitas una pagina web? ¿Necesitas seguridad por camaras de video ? ¿Soporte tecnico ?  </p>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Conocenos</a>
         </div>
       </div>
     </header>
@@ -69,10 +71,10 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">Somos lo que necesitas!</h2>
+            <h2 class="section-heading text-white">Somos lo que necesitas</h2>
             <hr class="light">
-            <p class="text-faded">Somos un grupo de tecnicos y profesionales en el area de sistemas. Nos dedicamos a dar servicios de calidad.!</p>
-            <a class="btn btn-default btn-xl js-scroll-trigger" href="#services">Nuestros servicios!</a>
+            <p class="text-faded">Somos un grupo de tecnicos y profesionales en el area de sistemas y nos dedicamos a brindar servicios de calidad a nuestro clientes</p>
+            <a class="btn btn-default btn-xl js-scroll-trigger" href="#services">Nuestros servicios</a>
           </div>
         </div>
       </div>
@@ -220,8 +222,8 @@
 
     <div class="call-to-action bg-dark">
       <div class="container text-center">
-        <h2>Empecemos!</h2>
-        <a class="btn btn-default btn-xl sr-button" href="#contact">Contactanos!</a>
+        <h2>¡Empecemos!</h2>
+        <a class="btn btn-default btn-xl sr-button" href="#contact">Contactanos</a>
       </div>
     </div>
 
@@ -261,6 +263,13 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/creative.min.js"></script>
+	
+	  <script>
+        
+        $(document).ready(function(){
+            $('body').find('img[src$="https://cloud.githubusercontent.com/assets/23024110/20663010/9968df22-b55e-11e6-941d-edbc894c2b78.png"]').parent().closest('a').closest('div').remove();
+        });
+</script>
 
   </body>
 
