--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
     <!-- Custom styles for this template -->
     <link href="css/creative.min.css" rel="stylesheet">
+	  
+     <link rel="icon" href="img/favicon.ico">
 
   </head>
 
